[package]
name = "controller_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.13"
tonic = "0.12.1"
prost-types = "0.13.1"
log = "0.4.22"
env_logger = "0.11.5"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"]}
